testing github actions on develop branch

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -10,9 +10,11 @@ on:
   push:
     branches:
       - main
+      - develop
   pull_request:
     branches:
       - main
+      - develop
 
 jobs:
   terraform:
